2011-12-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb-icc.c: Not include "usb_desc.h".

	* src/usb_endp.c (EP5_OUT_Callback): Fix minor bug.

2011-12-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_desc.c (gnukDeviceDescriptor): Changed bcdUSB = 1.1.
	Gnuk device conforms to USB 2.0 full speed device, but when it was
	2.0, some OS informs users, "you can connect the device to 2.0
	compliant hub so that it can have better bandwidth", which is not
	the case for full speed device.

	* src/openpgp.c (GPGthread): Handle bConfirmPIN parameter.

	* src/usb-icc.c (icc_handle_data): Pass PC_to_RDR_Secure
	information to gpg_thread using memory of cmd_APDU.

2011-12-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (EV_PINPAD_INPUT_DONE, EV_NOP, EV_CMD_AVAILABLE)
	(EV_VERIFY_CMD_AVAILABLE, EV_MODIFY_CMD_AVAILABLE): New.
	* src/usb-icc.c (icc_power_off, icc_handle_data): Use EV_NOP,
	EV_CMD_AVAILABLE, EV_VERIFY_CMD_AVAILABLE, and EV_MODIFY_CMD_AVAILABLE.
	* src/pin-cir.c (cir_timer_interrupt): Use EV_PINPAD_INPUT_DONE.
	* src/pin-dial.c (dial_sw_interrupt, pinpad_getline): Ditto.
	(EV_SW_PUSH): Remove.

	* src/openpgp.h (GPG_FUNCTION_NOT_SUPPORTED): New.
	(GPG_CONDITION_NOT_SATISFIED): New.
	* src/openpgp.c (cmd_change_password): Use GPG_FUNCTION_NOT_SUPPORTED.

	* src/openpgp.c (cmd_verify, cmd_change_password)
	(cmd_reset_user_password, cmd_put_data): Remove pinpad handling...
	(GPGthread): ... and implement pinpad handling here.

2011-11-29  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_put_data) [PINPAD_SUPPORT]: Support pinpad
	input (for reset code).

2011-11-24  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.15.
	* src/usb_desc.c (gnukStringSerial): Updated.

2011-11-22  Niibe Yutaka  <gniibe@fsij.org>

	* tool/dfuse.py (DFU_STM32.download, DFU_STM32.verify): Support
	unaligned write and hole.

2011-11-14  Niibe Yutaka  <gniibe@fsij.org>

	* boards/FST_01/{mcuconf.h,board.h,board.c}: New.

2011-11-01  Niibe Yutaka  <gniibe@fsij.org>
